src/ui/snapshots/starfold__ui__frames__file-submenu-100x30.snap
---
source: src/ui/frames.rs
expression: submenu
---
╔═ S T A R / F O L D ══════════════════════════════════════════════════════════════════════ stack ═╗
║                                         ‹  hidden  sort  filter  Bookmark  places  view  actions ║
║─┌─────────────────────┐· 290 B ──────────────────────────────────────────────────────────────────║
║ │  Open               │                                           dir             -  Sep 10      ║
║ │  Preview            │                                           dir             -  Sep 10      ║
║ │  Mark / unmark      │                                           dir             -  Sep 10      ║
║›│─────────────────────│                                           bin         256 B  Sep 10      ║
║ │  Copy…              │                                           link          7 B  Sep 10      ║
║ │  Move…              │                                           link         27 B  Sep 10      ║
║ │  Rename…            │                                                                          ║
║ │  Copy current path  │                                                                          ║
║ │─────────────────────┌──────────────────┐                                                       ║
║ │  New              › │  New file…       │                                                       ║
║ │  Archive          › │  New directory…  │                                                       ║
║ │─────────────────────└──────────────────┘                                                       ║
║ │  Delete             │                                                                          ║
╚═│─────────────────────│ree / 500.0 GB total══════════════════════════════════════════════════════╝
╔═│  Tabs…              │══════════════════════════════════════════════════════════════════════════╗
║ │  Appearance       › │                                                                    close ║
║ │  Recovery         › │                                                            File metadata ║
║ └─────────────────────┘-stream                                                                   ║
║ Size: 256 B                                                                                      ║
║ Permissions: -rw-r--r--                                                                          ║
║ Modified: 2026-09-10T12:00:00Z                                                                   ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ OPERATIONS ═════════════════════════════════════════════════════════════════════════════════════╗
║                                                                                           remove ║
║                                          nothing queued                                          ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
? help  / filter  space mark  enter open  y yank  p paste  m move  dd delete                  ~  off
