src/ui/snapshots/starfold__ui__frames__file-submenu-60x21.snap
---
source: src/ui/frames.rs
expression: submenu
---
╔═ S T A R / F O L D ══════════════════════════════ stack ═╗
║ ‹  hidden  sort  filter  Bookmark  places  view  actions ║
║─┌─────────────────────┐· 290 B ──────────────────────────║
║ │  Open               │                   -  Sep 10      ║
║ │  Preview            │                   -  Sep 10      ║
║ │  Mark / unmark      │                   -  Sep 10      ║
║›│─────────────────────│               256 B  Sep 10      ║
║ │  Copy…              │                 7 B  Sep 10      ║
║ │  Move…              │                27 B  Sep 10      ║
║ │  Rename…            │                                  ║
║ │  Copy current path  │                                  ║
╚═│─────────────────────┌──────────────────┐l══════════════╝
╔═│  New              › │  New file…       │═══════════════╗
║ │  Archive          › │  New directory…  │         close ║
║ │─────────────────────└──────────────────┘               █
╚═│  Delete             │══════════════════════════════════╝
╔═│─────────────────────│══════════════════════════════════╗
║ │  Tabs…              │                           remove ║
║ │  Recovery         › │thing queued                      ║
╚═└─────────────────────┘══════════════════════════════════╝
? help  / filter  space mark  enter open  y yank  p   ~  off
