src/ui/snapshots/starfold__ui__frames__filter-terminal-100x30.snap
---
source: src/ui/frames.rs
expression: "render(&mut app, 100, 30)"
---
╔═ S T A R / F O L D ══════════════════════════════════════════════════════════════════════ stack ═╗
║                                         ‹  hidden  sort  filter  Bookmark  places  view  actions ║
║▸ ~                                                                                        6 items║
║▸ projects/                                                                                 1 item║
║─ starwire/ ── 2 files · 2 dirs · 336 B ──────────────────────────────────────────────────── /car ║
║    λ Cargo.toml                                                   toml         92 B  11:00       ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ PREVIEW — λ Cargo.toml ═════════════════════════════════════════════════════════════════════════╗
║                                                                                            close ║
║                                                                                      toml · 92 B ║
║ [package]                                                                                        █
║ name = "starwire"                                                                                ║
║ version = "0.1.0"                                                                                ║
║ edition = "2021"                                                                                 ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ OPERATIONS ═════════════════════════════════════════════════════════════════════════════════════╗
║                                                                                       run  clear ║
║                                          nothing queued                                          ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
? help  / filter  space mark  enter open  y yank  p paste  m move  d delet  ~/projects/starwire  off
