src/ui/snapshots/starfold__ui__frames__floor-60x20.snap
---
source: src/ui/frames.rs
expression: "render(&mut app, 60, 20)"
---










               STAR/FOLD needs at least 60×21
