src/ui/snapshots/starfold__ui__frames__help-mocha-100x30.snap
---
source: src/ui/frames.rs
expression: "render(&mut app, 100, 30)"
---
╔═ S T A R / F O L D ══════════════════════════════════════════════════════════════════════ stack ═╗
║         ╔═ KEYS ═══════════════════════════════════════════════════════════════════════╗ actions ║
║─ ~ ── 3 ║  tabs                               stack                                    ║─────────║
║›   ▸ emp║  ctrl+t        new tab              click                move the cursor     ║ 10      ║
║    ▸ pic║  ctrl+w        close tab            double-click         open it             ║ 10      ║
║    ▸ pro║  ctrl+pgdn     next tab             ctrl+click           actions menu        ║ 10      ║
║    ◇ blo║  ctrl+pgup     previous tab         right-click          actions menu        ║ 10      ║
║    ↗ dan║  ctrl+p        tabs and actions     click a crumb        jump there          ║ 10      ║
║    ↗ not║  navigation                         wheel                scroll three rows   ║ 10      ║
║         ║  tab           next module          modules                                  ║         ║
║         ║  shift+tab     previous module      click a fold         open it             ║         ║
║         ║  alt+1         the stack            click a word         what it says        ║         ║
║         ║  F7/alt+2      the preview          status                                   ║         ║
║         ║  alt+3         operations           click the bar        open operations     ║         ║
║         ║  up/k          up one                                                        ║         ║
║         ║  down/j        down one                                                      ║         ║
╚═■■■■■■■■║  shift+up/K    up ten                                                        ║═════════╝
╔═ PREVIEW║  shift+down/J  down ten                                                      ║═════════╗
║         ║  pgup          page up                                                       ║   close ║
║         ║  pgdn          page down                                                     ║         ║
║         ║  home/gg       to the top                                                    ║         ║
║         ║  end/G         to the bottom                                                 ║         ║
║         ║  enter         open                                                          ║         ║
║         ║  esc           cancel                                                        ║         ║
╚═════════║  stack                                                                       ║═════════╝
╔═ OPERATI║  l/right       into the directory                                            ║═════════╗
║         ║  h/left/bs     parent directory                                              ║  remove ║
║         ║  alt+up        jump to the parent                                            ║         ║
╚═════════╚══════════════════════════════════════════════════════ more below · esc close ╝═════════╝
? help  / filter  space mark  enter open  y yank  p paste  m move  dd delete                  ~  off
