src/ui/snapshots/starfold__ui__frames__help-terminal-100x30.snap
---
source: src/ui/frames.rs
expression: "render(&mut app, 100, 30)"
---
╔═ S T A R / F O L D ══════════════════════════════════════════════════════════════════════ stack ═╗
║         ╔═ KEYS ═══════════════════════════════════════════════════════════════════════╗ actions ║
║─ ~ ── 3 ║  navigation                         stack                                    ║─────────║
║›   ▸ emp║  tab           next module          click                move the cursor     ║ 10      ║
║    ▸ pic║  shift+tab     previous module      double-click         open it             ║ 10      ║
║    ▸ pro║  alt+1         the stack            ctrl+click           actions menu        ║ 10      ║
║    ◇ blo║  alt+2         the preview          right-click          actions if enabled  ║ 10      ║
║    ↗ dan║  alt+3         operations           click a crumb        jump there          ║ 10      ║
║    ↗ not║  up/k          up one               wheel                scroll three rows   ║ 10      ║
║         ║  down/j        down one             modules                                  ║         ║
║         ║  shift+up/K    up ten               click a fold         open it             ║         ║
║         ║  shift+down/J  down ten             click a word         what it says        ║         ║
║         ║  pgup          page up              status                                   ║         ║
║         ║  pgdn          page down            click the bar        open operations     ║         ║
║         ║  home/gg       to the top                                                    ║         ║
║         ║  end/G         to the bottom                                                 ║         ║
╚═════════║  enter         open                                                          ║═════════╝
╔═ PREVIEW║  esc           cancel                                                        ║═════════╗
║         ║  stack                                                                       ║   close ║
║         ║  l/right       into the directory                                            ║         ║
║         ║  h/left/bs     parent directory                                              ║         ║
║         ║  alt+up        jump to the parent                                            ║         ║
║         ║  alt+down      jump back down                                                ║         ║
║         ║  gh            the home directory                                            ║         ║
╚═════════║  gr            the root                                                      ║═════════╝
╔═ OPERATI║  o             open externally                                               ║═════════╗
║         ║  r             rename                                                        ║n  clear ║
║         ║  c             file actions menu                                             ║         ║
╚═════════╚══════════════════════════════════════════════════════ more below · esc close ╝═════════╝
? help  / filter  space mark  enter open  y yank  p paste  m move  d delete                   ~  off
