src/ui/snapshots/starfold__ui__frames__marked-cursor-mocha-100x30.snap
---
source: src/ui/frames.rs
expression: dark_frame
---
╔═ S T A R / F O L D ══════════════════════════════════════════════════════════════════════ stack ═╗
║                                         ‹  hidden  sort  filter  Bookmark  places  view  actions ║
║─ ~ ── 3 files · 3 dirs · 290 B ──────────────────────────────────────────────────────────────────║
║›●  ▸ empty/                                                       dir             -  Sep 10      ║
║ ○  ▸ pictures/                                                    dir             -  Sep 10      ║
║ ○  ▸ projects/                                                    dir             -  Sep 10      ║
║ ○  ◇ blob.bin                                                     bin         256 B  Sep 10      ║
║ ○  ↗ dangling                                                     link          7 B  Sep 10      ║
║ ○  ↗ notes.txt                                                    link         27 B  Sep 10      ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ PREVIEW — ▸ empty ══════════════════════════════════════════════════════════════════════════════╗
║                                                                                            close ║
║                                                                    Tree · 0 files · 0 dirs shown ║
║ Empty directory                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ OPERATIONS ═════════════════════════════════════════════════════════════════════════════════════╗
║                                                                                       run  clear ║
║                                          nothing queued                                          ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
? help  / filter  space mark  enter open  y yank  p paste  m move  d delete   1 marked · 0 B  ~  off
