src/ui/snapshots/starfold__ui__frames__marked-terminal-100x30.snap
---
source: src/ui/frames.rs
expression: "render(&mut app, 100, 30)"
---
╔═ S T A R / F O L D ══════════════════════════════════════════════════════════════════════ stack ═╗
║                                         ‹  hidden  sort  filter  Bookmark  places  view  actions ║
║─ ~ ── 3 files · 3 dirs · 290 B ──────────────────────────────────────────────────────────────────║
║●   ▸ empty/                                                       dir             -  Sep 10      ║
║○   ▸ pictures/                                                    dir             -  Sep 10      ║
║●   ▸ projects/                                                    dir             -  Sep 10      ║
║○   ◇ blob.bin                                                     bin         256 B  Sep 10      ║
║○   ↗ dangling                                                     link          7 B  Sep 10      ║
║○   ↗ notes.txt                                                    link         27 B  Sep 10      ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ PREVIEW — ◇ blob.bin ═══════════════════════════════════════════════════════════════════════════╗
║                                                                                            close ║
║                                                                                    File metadata ║
║ Type: application/octet-stream                                                                   ║
║ Size: 256 B                                                                                      ║
║ Permissions: -rw-r--r--                                                                          ║
║ Modified: 2026-09-10T12:00:00Z                                                                   ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ OPERATIONS ═════════════════════════════════════════════════════════════════════════════════════╗
║                                                                                       run  clear ║
║                                          nothing queued                                          ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
? help  / filter  space mark  enter open  y yank  p paste  m move  d delet  2 marked · 357 B  ~  off
