src/ui/snapshots/starfold__ui__frames__operations-open-terminal-100x30.snap
---
source: src/ui/frames.rs
expression: "render(&mut app, 100, 30)"
---
╔═ S T A R / F O L D ══════════════════════════════════════════════════════════════════════ stack ═╗
║                                         ‹  hidden  sort  filter  Bookmark  places  view  actions ║
║─ ~ ── 2 files · 3 dirs · 283 B ──────────────────────────────────────────────────────────────────║
║    ▸ empty/                                                       dir             -  Sep 10      ║
║    ▸ pictures/                                                    dir             -  Sep 10      ║
║    ▸ projects/                                                    dir             -  Sep 10      ║
║    ◇ blob.bin                                                     bin         256 B  Sep 10      ║
║    ↗ notes.txt                                                    link         27 B  Sep 10      ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ PREVIEW — ↗ notes.txt ══════════════════════════════════════════════════════════════════════════╗
║                                                                                            close ║
║ → projects/starwire/README.md                                                                    ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
╔═ OPERATIONS ═════════════════════════════════════════════════════════════════════════════════════╗
║                                                                                           remove ║
║COPY 1 item: ~/blob.bin → ~                 failed · ctrl+x cancel · x remove · esc remove waiting║
║MOVE 1 item: ~/notes.txt → ~                                                                failed║
║TRASH 1 item                                                                                  done║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝
? help  ctrl+x cancel  x remove  esc remove waiting                                           ~  off
